--- a/src/components/shared/ButtonToolBar/ButtonToolBar.module.css
+++ b/src/components/shared/ButtonToolBar/ButtonToolBar.module.css
@@ -5,6 +5,7 @@
     background-color: #4d1601;
     color: white;
     padding: 0.75rem 3rem;
+    margin: 5rem;
     display: flex;
     justify-content: space-around;
     align-items: center;
