--- a/src/components/shared/ToolBar.module.css
+++ b/src/components/shared/ToolBar.module.css
@@ -9,9 +9,13 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 5%;
+    padding: 0 0%;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
     z-index: 10;
+}
+
+.header > h1 {
+    margin-left: 5rem;
 }
 
 .main-image {
