--- a/src/components/Meals/AvailableMeals.module.css
+++ b/src/components/Meals/AvailableMeals.module.css
@@ -11,6 +11,13 @@
     padding: 0;
 }
 
+.MealsLoading p {
+    text-align: center;
+    font-weight: bold;
+    margin: 1em;
+    font-size: 3.5em;
+}
+
 @keyframes meals-appear {
     from {
         opacity: 0;
